포토 샘플을 위한 베이스 작업 진행

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.0.4'
+    ext.supportLibraryVersion = '24.2.1'
+
     repositories {
         jcenter()
     }
