--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
