#8 Android MVC 예제 추가

--- a/app-java/build.gradle
+++ b/app-java/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     })
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:design:$supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
 
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
