--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // OK HTTP
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+
+    testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
+    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
 }
 
 repositories {
