--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
 
+    // ImageLoad library
+    // https://github.com/bumptech/glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
     testCompile 'com.jayway.awaitility:awaitility:1.7.0'
 }
