--- a/app-java/build.gradle
+++ b/app-java/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
 
+    // ImageLoad library
+    // https://github.com/bumptech/glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testCompile 'junit:junit:4.12'
 
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
