--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     // https://github.com/bumptech/glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    // Thdev support base
+    compile 'tech.thdev.support:base:1.0.4'
+
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
     testCompile 'com.jayway.awaitility:awaitility:1.7.0'
 }
