#17 - Detail ViewPager ui change.

--- a/app-kotlin/src/main/AndroidManifest.xml
+++ b/app-kotlin/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/AppTheme.Black.NoActionBar" />
 
         <activity
-            android:name=".view.detail_more.DetailMoreActivity"
+            android:name=".view.detail.DetailMoreActivity"
             android:theme="@style/AppTheme.Black.NoActionBar" />
     </application>
 
