--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -60,6 +60,12 @@ dependencies {
 
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
     testCompile 'com.jayway.awaitility:awaitility:1.7.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
 }
 
 repositories {
