#17 Model 이름 변경 #18 BottomSheet 샘플 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app-kotlin', ':app-java', ':sample_putextra'
+include ':app-kotlin', ':app-java', ':sample_01_putextra', ':sample_02_bottomsheet'
