--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -58,8 +58,11 @@ dependencies {
     // Thdev support base
     compile 'tech.thdev.support:base:1.0.4'
 
+
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
-    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
+    androidTestCompile 'com.jayway.awaitility:awaitility:1.7.0'
+
+    androidTestCompile "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.ext.kotlin_version"
     androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
