--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
 
     testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
+    testCompile 'com.jayway.awaitility:awaitility:1.7.0'
     androidTestCompile 'com.jayway.awaitility:awaitility:1.7.0'
 
     androidTestCompile "org.jetbrains.kotlin:kotlin-test-junit:$rootProject.ext.kotlin_version"
