#21 Add Presenter Test code

--- a/app-java/build.gradle
+++ b/app-java/build.gradle
@@ -57,6 +57,6 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
-    testCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
+    testCompile 'org.mockito:mockito-core:2.2.21'
     testCompile 'com.jayway.awaitility:awaitility:1.7.0'
 }
