--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from: 'dependencies.gradle'
 
 buildscript {
+    ext {
+        // Build SDK version
+        buildToolsVersion = '24.0.3'
+        compileSdkVersion = 24
+        targetSdkVersion = 24
+        minSdkVersion = 16
+
+        kotlin_version = '1.0.6'
+        supportLibraryVersion = '24.2.1'
+    }
+
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.5"
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
