--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':old-app-kotlin', ':old-app-java', ':app', ':list-sample', ':recycler-sample'
+include ':old-app-kotlin', ':old-app-java', ':app', ':list-sample'
