--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation 'com.github.bumptech.glide:glide:4.3.0'
+    compile 'com.github.bumptech.glide:glide:4.3.0'
     kapt 'com.github.bumptech.glide:compiler:4.3.0'
 
     testImplementation 'junit:junit:4.12'
