#48 Add Bottom Sheet sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':old-app-kotlin', ':old-app-java', ':app', ':list-sample', ':imageloadsample'
+include ':old-app-kotlin', ':old-app-java', ':app', ':list-sample', ':imageloadsample', ':bottomsheetsample'
