--- a/app-kotlin/src/main/AndroidManifest.xml
+++ b/app-kotlin/src/main/AndroidManifest.xml
@@ -22,11 +22,11 @@
         </activity>
         <activity
             android:name=".view.detail.DetailMoreActivity"
-            android:theme="@style/AppTheme.Black.NoActionBar" />
+            android:theme="@style/Theme.MyApplication.Black.NoActionBar" />
 
         <activity
             android:name=".view.detail_photo_id.DetailPhotoIdActivity"
-            android:theme="@style/AppTheme.Black.NoActionBar" />`
+            android:theme="@style/Theme.MyApplication.Black.NoActionBar" />`
     </application>
 
 </manifest>
