--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -45,6 +45,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(path: ':base')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
