#60 Update Ui Test

--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -43,6 +43,12 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.hamcrest:hamcrest-junit:2.0.0.0'
+    }
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(path: ':base')
@@ -69,7 +75,11 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    androidTestImplementation "org.awaitility:awaitility:$awaitilityVersion"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:$mockitoCore"
