--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,6 @@ dependencies {
     androidTestImplementation "androidx.test:rules:$uiTestVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomatorVersion"
     androidTestImplementation "org.awaitility:awaitility:$awaitilityVersion"
 }
