--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-buildscript {
-
-    ext {
-        // Build SDK version
-        compileSdkVersionInfo = 29
-        buildToolsVersionInfo = "29.0.2"
-        minSdkVerisonInfo = 23
-        targetSdkVersionInfo = 29
-
-        kotlin_version = "1.3.72"
-
-        appcompatVersion = '1.1.0'
-        materialVersion = '1.1.0'
-
-        butterKnifeVersion = '10.2.1'
-    }
-
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id 'com.android.application' version '8.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
+ext {
+    // Build SDK version
+    compileSdkVersionInfo = 34
+    buildToolsVersionInfo = "34.0.0"
+    minSdkVerisonInfo = 28
+    targetSdkVersionInfo = 34
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    appcompatVersion = '1.6.1'
+    materialVersion = '1.11.0'
 }
