마지막 챕터 - 코드 최신화

--- a/app-kotlin/build.gradle
+++ b/app-kotlin/build.gradle
@@ -16,7 +16,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        renderscriptTargetApi 18
+        renderscriptTargetApi targetSdkVersionInfo
         renderscriptSupportModeEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
