--- a/imageloadsample/src/main/AndroidManifest.xml
+++ b/imageloadsample/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name="tech.thdev.list_view.MainActivity"
+            android:name="tech.thdev.imageloadsample.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
